# agentic_ai_groupwork

./: .env.example  .gitignore  DELIVERABLES.md  MANIFEST.txt  Makefile  QUICKSTART.md  README.md  START_HERE.md  TOOLS.md  app.py  main.py  pyproject.toml  requirements.txt  summary.md
.claude/: settings.local.json
config/: config.txt
docs/: ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  OPERATIONS_RUNBOOK.md  REPO_STRUCTURE.md  REQUIREMENTS_AND_ARCHITECTURE.md  TRACEABILITY_MATRIX.md
infrastructure/: sam_template.yaml
lambda/: override_handler.py  query_handler.py  submission_handler.py
src/api/: handlers.py
src/core/: state_manager.py
src/orchestration/: supervisor_agent.py  workflow.py
src/tools/: __init__.py  all_tools.py  communication.py  data_acquisition.py  decision_logic.py  document_understanding.py
tests/: test_all.py
